src/tests/snapshots/tera__tests__parser__parser_errors@assign_reserved_keywords.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/assign_reserved_keywords.txt
---
 Syntax error --> [assign_reserved_keywords.txt:1:7]
  |
1 | {% set break = false %}
  |        ^---
  = break is a reserved keyword of Tera, it cannot be assigned to.
        
